--- a/combicode-js/package.json
+++ b/combicode-js/package.json
@@ -6,6 +6,9 @@
   "bin": {
     "combicode": "index.js"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
