--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -26,5 +26,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Publish to NPM
-        run: npm publish --provenance
+      - name: Publish to npm
+        run: npm publish --access public --no-git-checks
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
