--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -17,6 +17,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Sync shared assets into package
+        run: |
+          chmod +x ./scripts/sync-assets.sh
+          ./scripts/sync-assets.sh
+        working-directory: . # Run from root
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
