fix(ci): grant write permissions and define tag format for release-please

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -12,7 +12,8 @@
           "path": "combicode-js/package-lock.json",
           "jsonpath": "$.version"
         }
-      ]
+      ],
+      "tag-name": "v${version}"
     }
   }
 }
