--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -11,6 +11,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      issues: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -19,6 +20,7 @@ jobs:
         id: release
         uses: googleapis/release-please-action@v4
         with:
+          create-labels: false
           config-file: release-please-config.json
           manifest-file: .release-please-manifest.json
 
