fix(ci): correct release-please workflow permissions for labels

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,7 +4,11 @@
     ".": {
       "release-type": "simple",
       "component": "combicode",
-      "version-file": "combicode-py/combicode/__init__.py",
+      "version-file": {
+        "type": "plain-text",
+        "path": "combicode-py/combicode/__init__.py",
+        "regex": "__version__ = \"(?<version>.*)\""
+      },
       "extra-files": [
         "combicode-js/package.json",
         {
