fix(py): correctly include package data via pyproject.toml

--- a/combicode-py/pyproject.toml
+++ b/combicode-py/pyproject.toml
@@ -28,3 +28,6 @@ combicode = "combicode.main:cli"
 
 [tool.setuptools.dynamic]
 version = { attr = "combicode.__version__" }
+
+[tool.setuptools.package-data]
+combicode = ["config/ignore.json"]
