feat: add file sizes to tree, improve file headers, and add integration tests

--- a/combicode-py/pyproject.toml
+++ b/combicode-py/pyproject.toml
@@ -31,3 +31,6 @@ version = { attr = "combicode.__version__" }
 
 [tool.setuptools.package-data]
 combicode = ["config/ignore.json"]
+
+[project.optional-dependencies]
+test = ["pytest"]
