--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Run Tests
+        run: npm test
+
       - name: Publish to npm
         run: npm publish --access public --no-git-checks
         env:
