--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -34,6 +34,11 @@ jobs:
       - name: Install dependencies
         run: python -m pip install --upgrade pip build
 
+      - name: Run Tests
+        run: |
+          pip install ".[test]"
+          pytest
+
       - name: Build package
         run: python -m build
 
