--- a/combicode-js/package.json
+++ b/combicode-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "combicode",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "A CLI tool to combine a project's codebase into a single file for LLM context.",
   "main": "index.js",
   "bin": {
@@ -10,7 +10,8 @@
     "access": "public"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "mkdir -p config && cp ../configs/ignore.json config/ignore.json",
+    "test": "node test/test.js"
   },
   "repository": {
     "type": "git",
@@ -32,7 +33,7 @@
   "author": "A. Aurelions",
   "license": "MIT",
   "dependencies": {
-    "fast-glob": "^3.3.1",
-    "yargs": "^17.7.2"
+    "fast-glob": "^3.3.3",
+    "yargs": "^18.0.0"
   }
 }
