--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   build-and-publish:
+    if: startsWith(github.ref, 'refs/tags/combicode-js-')
     runs-on: ubuntu-latest
     permissions:
       contents: read
