--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   pypi-publish:
+    if: startsWith(github.ref, 'refs/tags/combicode-py-')
     name: Upload release to PyPI
     runs-on: ubuntu-latest
     environment:
