--- a/combicode-js/package.json
+++ b/combicode-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "combicode",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "A CLI tool to combine a project's codebase into a single file for LLM context.",
   "main": "index.js",
   "bin": {
@@ -10,6 +10,7 @@
     "access": "public"
   },
   "scripts": {
+    "prepack": "mkdir -p config && cp ../configs/ignore.json config/ignore.json",
     "pretest": "mkdir -p config && cp ../configs/ignore.json config/ignore.json",
     "test": "node test/test.js"
   },
