--- a/combicode-js/package.json
+++ b/combicode-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "combicode",
-  "version": "1.5.3",
+  "version": "1.5.4",
   "description": "A CLI tool to combine a project's codebase into a single file for LLM context.",
   "main": "index.js",
   "bin": {
@@ -10,8 +10,6 @@
     "access": "public"
   },
   "scripts": {
-    "prepack": "mkdir -p config && cp ../configs/ignore.json config/ignore.json",
-    "pretest": "mkdir -p config && cp ../configs/ignore.json config/ignore.json",
     "test": "node test/test.js"
   },
   "repository": {
@@ -34,7 +32,7 @@
   "author": "A. Aurelions",
   "license": "MIT",
   "dependencies": {
-    "fast-glob": "^3.3.3",
+    "ignore": "^5.3.0",
     "yargs": "^17.7.2"
   }
 }
