--- a/combicode-js/package.json
+++ b/combicode-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "combicode",
-  "version": "1.7.4",
+  "version": "2.0.0",
   "description": "A CLI tool to combine a project's codebase into a single file for LLM context.",
   "main": "index.js",
   "bin": {
@@ -34,5 +34,26 @@
   "dependencies": {
     "ignore": "^5.3.0",
     "yargs": "^17.7.2"
+  },
+  "optionalDependencies": {
+    "tree-sitter": "^0.22.4",
+    "tree-sitter-c": "^0.24.1",
+    "tree-sitter-c-sharp": "^0.23.1",
+    "tree-sitter-cpp": "^0.20.5",
+    "tree-sitter-go": "^0.23.4",
+    "tree-sitter-java": "^0.21.0",
+    "tree-sitter-javascript": "^0.23.1",
+    "tree-sitter-kotlin": "^0.3.8",
+    "tree-sitter-lua": "^2.1.3",
+    "tree-sitter-php": "^0.23.0",
+    "tree-sitter-python": "^0.23.6",
+    "tree-sitter-ruby": "^0.21.0",
+    "tree-sitter-rust": "^0.24.0",
+    "tree-sitter-scala": "^0.23.0",
+    "tree-sitter-swift": "^0.7.1",
+    "tree-sitter-typescript": "^0.21.0"
+  },
+  "overrides": {
+    "tree-sitter": "^0.22.4"
   }
 }
